--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jormaedes/odin-recursion/issues"
   },
-  "homepage": "https://github.com/jormaedes/odin-recursion#readme"
+  "homepage": "https://github.com/jormaedes/odin-recursion#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.29.0",
+    "jest": "^30.2.0"
+  }
 }
